# emergent-pattern-catalog

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  README.md  REPLICATION_NOTES.md  SPRINT3_UPDATE_GUIDE.md  pyproject.toml  requirements.txt
analysis/: __init__.py  cross_model.py  report.py  runner.py
docs/: detector_cards.md  ontology.md  paper_outline.md  paper_outline_v0_4.md  paper_section1_draft.md  paper_section2_draft.md  paper_section3_draft.md  paper_section4_draft.md  paper_section5_draft.md  paper_section6_draft.md  paper_section7_draft.md  paper_section8_draft.md  pattern_catalog.md
epc/: __init__.py  base_detector.py  base_metric.py  base_model.py  detector_result.py  orchestration.py
metrics/: __init__.py  aggregation.py  base.py  battery.py  collective_motion.py  complexity.py  criticality.py  delayed_gratification.py  equilibrium.py  information_theory.py  memory.py  noise_response.py  robustness.py
models/: __init__.py  base.py
scripts/: count_transfer_matrix.py  run_experiment.py  sprint20_voter_characterization.py  sprint21_schelling_p18_characterization.py  te_benchmark_60x60.py
tests/: test_abp_p2_e2e.py  test_ca_replication.py  test_caveat_resolution.py  test_cross_detection_matrix.py  test_cross_model.py  test_gs_p3_e2e.py  test_hk_p21_e2e.py  test_ksg_te_continuous.py  test_kuramoto_p10_e2e.py  test_lv_p11_e2e.py  test_metrics.py  test_models.py  test_nowak_may_p27_e2e.py  test_ns_p8_e2e.py  test_orchestration.py  test_p15_generalized.py  test_p1_diagnostic_schema.py  test_p1_substrate_robustness.py  test_p5_detector_validation.py  (+11 more)
(+65 files in other folders)
